# Camera-Drones-2021

./: .gitignore  README.md  rqt_multiplot.xml  rviz_config.rviz
astra_camera/launch/: astra.launch
dla2_planner/: CMakeLists.txt  README.md  package.xml
dla2_planner/include/: util.h
dla2_planner/include/dla2_path_planner/: dla2_path_planner_ros.h  dla3_path_planner_ros.h  helper_functions.h
dla2_planner/include/trajectory_visualization/: trajectory_visualization.h
dla2_planner/launch/: octomap_mapping_a2.launch  path_planning.launch  trajectory_visualization.launch
dla2_planner/maps/: dronespace_synthetic.bt  dronespace_synthetic_display.bt
dla2_planner/rviz/: config.rviz
dla2_planner/src/: OMPL_Example_OptimalPlanning.cpp  exampleEDTOctomap.cpp  main_ros_node.cpp  trajectory_visualization_ros_node.cpp
dla2_planner/src/dla2_path_planner/: dla2_path_planner_ros.cpp
dla2_planner/src/trajectory_visualization/: trajectory_visualization.cpp
dla3_trajectory_generator/: CMakeLists.txt  package.xml
dla3_trajectory_generator/cfg/: firefly_params.yaml
dla3_trajectory_generator/include/dla3_trajectory_generator/: dla3_trajectory_generator.h
dla3_trajectory_generator/launch/: dla3_trajectory_generator.launch
dla3_trajectory_generator/src/: dla3_trajectory_generator.cc  dla3_trajectory_generator_node.cc
dla3_trajectory_sampler/: CMakeLists.txt  dla3_trajectory_generator.launch  package.xml
dla3_trajectory_sampler/include/mav_trajectory_generation_example/: dla3_trajectory_sampler.h
dla3_trajectory_sampler/launch/: dla3_trajectory_sampler.launch
dla3_trajectory_sampler/src/: dla3_trajectory_sampler.cc  dla3_trajectory_sampler_node.cc
octomap_mapping/octomap_server/launch/: octomap_mapping.launch
ompl_example_2d/: CMakeLists.txt  package.xml
ompl_example_2d/include/ompl_example_2d/: ompl_example_2d.hpp
ompl_example_2d/src/: ompl_example_2d_node.cpp
